# credit-contribution-parser

./: CITATION.cff  CODEOWNERS  LICENSE.txt  README.md  pyproject.toml
CreditParser/: CreditParser.py  Preprocess_XML.py
CreditParser/Training_and_Inference/: bert_multilabel_training.py  credit_inference.py  credit_inference_cleanup.py  gpt_annotation.py
